# llgl

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: linux.yml
Documentation/: Modules.md
LLGL/: CMakeLists.txt
LLGL/3D/: CMakeLists.txt  Cube.cpp  Cube.hpp  ObjLoader.cpp  ObjLoader.hpp  Object3D.cpp  Object3D.hpp  Shapes.cpp  Shapes.hpp  Sphere.cpp  Sphere.hpp
LLGL/Core/: Angle.hpp  CMakeLists.txt  Color.hpp  Concepts.hpp  DelayedInit.hpp  EnumBits.hpp  Image.cpp  Image.hpp  Matrix.hpp  Rect.hpp  Size.hpp  Updateable.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorUtils.hpp  Vertex.hpp
LLGL/OpenGL/: Blend.cpp  CMakeLists.txt  Error.cpp  Error.hpp  FBO.cpp  FBO.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Utils.cpp  Utils.hpp  VAO.cpp  VAO.hpp  Vertex.cpp  Vertex.hpp  View.cpp  View.hpp
LLGL/OpenGL/Shaders/: Basic330Core.cpp  Basic330Core.hpp  ShadeFlat.cpp  ShadeFlat.hpp
LLGL/Renderer/: BatchRenderer.cpp  BatchRenderer.hpp  CMakeLists.txt  CoreRenderer.cpp  CoreRenderer.hpp  DrawState.hpp  FFPRenderer.cpp  FFPRenderer.hpp  RenderToTexture.cpp  RenderToTexture.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  StateScope.cpp  StateScope.hpp  Transform.cpp  Transform.hpp  View.cpp
LLGL/Resources/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp
LLGL/Window/: CMakeLists.txt  ContextSettings.hpp  Event.hpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp
LLGL/Window/Impls/: SDLWindow.cpp  SDLWindow.hpp  WindowImpl.hpp
Tests/3D/: CMakeLists.txt  ObjLoader.cpp  Shapes.cpp  Sphere.cpp
Tests/Renderer/: CMakeLists.txt  CoreRenderer.cpp  ImpossibleShapes.cpp  Oscilloscope.cpp  SimpleRenderer.cpp
Tests/Window/: SDLWindow.cpp
cmake/: LLGLConfig.cmake
